# mcp-registry-gateway

./: .dockerignore  .env.example  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CLAUDE.slim.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV_INSTRUCTIONS.md  Dockerfile  Makefile  NOTICE  README.md  SECURITY.md  build-config.yaml  build_and_run.sh  docker-compose.podman.yml  docker-compose.prebuilt.local.yml  docker-compose.prebuilt.yml  docker-compose.yml  get_asor_token.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  start_token_refresher.sh  test-keycloak-mcp.sh
.agent/agents/: backend-specialist.md  code-archaeologist.md  debugger.md  explorer-agent.md  frontend-specialist.md  mobile-developer.md  orchestrator.md  product-manager.md  product-owner.md  project-planner.md  qa-automation-engineer.md
.agent/workflows/: ui-ux-pro-max.md
.claude/: settings.json
.claude/agents/: arch-analyzer.md  code-reviewer.md  devops-architect.md  kubernetes-operator.md  performance-engineer.md  pm-agent.md  quality-engineer.md  security-auditor.md  technical-writer.md  test-runner.md
.claude/commands/: expert-mode.md  project-mode.md
.claude/instructions/: async-patterns.md  claude-code-features-guide.md  context-optimization-guide.md  development-workflow.md  documentation-standards.md  error-handling.md  kubernetes-operations.md  security-guidelines.md  testing-standards.md
.claude/output-styles/: debugging.md  minimal.md  teaching.md
.claude/rules/: api-endpoints.md  docker.md  kubernetes.md  pydantic-models.md  python-tests.md  terraform.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  REPOSITORY_SETUP.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: auth-server-test.yml  docs.yml  frontend-test.yml  helm-release.yml  helm-test.yml  metrics-service-test.yml  registry-test.yml  release.yml  terraform-test.yml
.serena/: project.yml
.serena/memories/: api_reference.md  code_style_conventions.md  development_workflow.md  frontend_styling_conventions.md  project_index.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
agents/: agent.py  cli_user_auth.py  client.py  system_prompt.txt
agents/a2a/: .dockerignore  README.md  docker-compose.arm.yml  docker-compose.local.yml  pyproject.toml
api/: README.md  USER-GROUP-MANAGEMENT.md  openapi.json  populate-registry.sh  registry_client.py  registry_management.py  test-management-api-e2e.md
auth_server/: .env.template  constants.py  metrics_middleware.py  oauth2_providers.yml  pyproject.toml  schemas.py  scopes.yml  server.py  utils.py
auth_server/providers/: entra.py  keycloak.py
auth_server/routes/: __init__.py
auth_server/services/: __init__.py
auth_server/validators/: __init__.py  cognito_validator.py
charts/: README.md
charts/auth-server/: Chart.yaml  values.schema.json  values.yaml
charts/keycloak-configure/: Chart.yaml  values.yaml
charts/mcp-gateway-registry-stack/: Chart.yaml  README.md  values.yaml
charts/mongodb-configure/: Chart.yaml  values.yaml
charts/registry/: .helmignore  Chart.yaml  values.schema.json  values.yaml
cli/: agent_mgmt.py  anthropic_transformer.py  get_user_token.py  import_from_anthropic_registry.sh  import_server_list.txt  mcp_client.py  mcp_security_scanner.py  mcp_utils.py  package-lock.json  package.json  scan_all_servers.py  service_mgmt.sh  test_asor_complete.py  user_mgmt.sh
cli/examples/: README.md  cloudflare-docs-server-config.json  code_reviewer_agent.json  context7-server-config.json  (+18 more)
config/: prometheus.yml
credentials-provider/: __init__.py  add_noauth_services.py  check_and_refresh_creds.sh  constants.py  exceptions.py  m2m_auth.py  token_refresher.py  utils.py
docker/: Dockerfile.auth  Dockerfile.mcp-server  Dockerfile.mcp-server-cpu  Dockerfile.mcp-server-light  Dockerfile.registry  Dockerfile.registry-cpu  Dockerfile.scopes-init  auth-entrypoint.sh  download-documentdb-ca-bundle.sh  mcp-server-entrypoint.sh  nginx_rev_proxy_http_and_https.conf  nginx_rev_proxy_http_only.conf  registry-entrypoint.sh
docs/: FAQ.md  FEATURES.md  OBSERVABILITY.md  README.md  a2a-agent-management.md  a2a.md  agentcore.md  ai-coding-assistants-setup.md  anthropic-registry-import.md  anthropic_registry_api.md  api-reference.md  auth-mgmt.md  auth.md  cli.md  cognito.md  complete-setup-guide.md  configuration.md  database-design.md  datastore-management.md  deployment-modes.md  dynamic-tool-discovery.md  embeddings.md  entra-id-setup.md  entra.md  environment-variables.md  federation.md  index.md  installation.md  jwt-token-vending.md  keycloak-integration.md  llms.txt  macos-setup-guide.md  mcp-registry-cli.md  metrics-architecture.md  podman-apple-silicon.md  prebuilt-images.md  quickstart.md  registry-auth-architecture.md  registry-auth-detailed.md  registry_api.md  (+9 more)
frontend/: .gitignore  README.md  biome.json  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts  vitest.setup.ts
keycloak/: README.md
metrics-service/: .env.example  Dockerfile  add_test_key.py  create_api_key.py  metrics_client.py  migrate.py  pyproject.toml
registry/: constants.py  main.py  version.py
release-notes/: v1.0.10.md  v1.0.12.md  v1.0.3.md  v1.0.4.md  v1.0.5.md  v1.0.6.md  v1.0.9-patch1.md  v1.0.9.md  v2.0.0.md
scripts/: README.md  build-images.sh  debug-scopes.py  deploy-registry.sh  docs-dev.sh  fix_auth_tests.py  generate-image-manifest.sh  init-documentdb-indexes.py  init-mongodb-ce.py  init-mongodb-indexes.py  init-mongodb.sh  load-scopes.py  manage-documentdb.py  manage-mongodb.py  mcp-registry-admin.json  mcp-servers-unrestricted-execute.json  mcp-servers-unrestricted-read.json  publish_containers.sh  refresh_m2m_token.sh  registry-admins.json  run-oauth-setup.sh  setup-atlassian-env.sh  test.py
servers/realserverfaketools/: README.md  pyproject.toml  server.py
terraform/: README.md
tests/: README.md  conftest.py
(+440 files in other folders)
