[project]
name = "real-server-fake-tools-mcp"
version = "0.1.0"
description = "MCP server with fake tools that take different parameter types"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastmcp>=2.0.0,<3.0.0",  # Pin to <3 per FastMCP recommendation for production stability
    "pydantic>=2.11.3",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
# Local-only project - never resolve from PyPI
package = false
